--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi (>=0.128.0,<0.129.0)",
-    "black (>=25.12.0,<26.0.0)",
     "pytest (>=9.0.2,<10.0.0)",
     "sqlalchemy (>=2.0.45,<3.0.0)",
     "aiosqlite (>=0.22.1,<0.23.0)",
@@ -23,3 +22,8 @@ package-mode = false
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[dependency-groups]
+dev = [
+    "black (>=25.12.0,<26.0.0)"
+]
