--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "sqlalchemy (>=2.0.45,<3.0.0)",
     "aiosqlite (>=0.22.1,<0.23.0)",
     "pydantic-settings (>=2.12.0,<3.0.0)",
-    "uvicorn (>=0.40.0,<0.41.0)"
+    "uvicorn (>=0.40.0,<0.41.0)",
+    "greenlet (>=3.3.0,<4.0.0)"
 ]
 
 [tool.poetry]
