--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "aiosqlite (>=0.22.1,<0.23.0)",
     "pydantic-settings (>=2.12.0,<3.0.0)",
     "uvicorn (>=0.40.0,<0.41.0)",
-    "greenlet (>=3.3.0,<4.0.0)"
+    "greenlet (>=3.3.0,<4.0.0)",
+    "alembic (>=1.18.0,<2.0.0)"
 ]
 
 [tool.poetry]
