--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "pydantic-settings (>=2.12.0,<3.0.0)",
     "uvicorn (>=0.40.0,<0.41.0)",
     "greenlet (>=3.3.0,<4.0.0)",
-    "alembic (>=1.18.0,<2.0.0)"
+    "alembic (>=1.18.0,<2.0.0)",
+    "jose (>=1.0.0,<2.0.0)"
 ]
 
 [tool.poetry]
