--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,9 @@ dependencies = [
     "uvicorn (>=0.40.0,<0.41.0)",
     "greenlet (>=3.3.0,<4.0.0)",
     "alembic (>=1.18.0,<2.0.0)",
-    "python-jose[cryptography] (>=3.5.0,<4.0.0)"
+    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
+    "bcrypt (>=5.0.0,<6.0.0)",
+    "python-multipart (>=0.0.22,<0.0.23)"
 ]
 
 [tool.poetry]
