--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
     "alembic (>=1.18.0,<2.0.0)",
     "python-jose[cryptography] (>=3.5.0,<4.0.0)",
     "bcrypt (>=5.0.0,<6.0.0)",
-    "python-multipart (>=0.0.22,<0.0.23)"
+    "python-multipart (>=0.0.22,<0.0.23)",
+    "pydantic[email] (>=2.12.5,<3.0.0)"
 ]
 
 [tool.poetry]
